--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <div class="footer">
    <div class="container">
-      <p class="copy">&copy; {{ site.time | date: '%Y' }} <a href="http://zhictory.github.io/blog">zhictory</a> Powered by <a href="http://jekyllrb.com">Jekyll</a></p>
+      <p class="copy">&copy; {{ site.time | date: '%Y' }} <a href="http://zhictory.github.io">zhictory</a> Powered by <a href="http://jekyllrb.com">Jekyll</a></p>
 
       <div class="footer-links"> 
          <ul class="noList">
-            <!-- Default Statcounter code for My Blog http://zhictory.github.io/blog/ -->
+            <!-- Default Statcounter code for My Blog http://zhictory.github.io/ -->
             <script type="text/javascript">
               var sc_project = 11741989;
               var sc_invisible = 1;
