--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,8 +2,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="{{ page.keywords }}">
-    <meta name="description" content="{{ page.description }}">
+    <meta name="keywords" content="{{ site.keywords }}">
+    <meta name="description" content="{{ site.description }}">
     <title>{{ page.title }}</title>
 
     <!-- Favicon -->
