--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,24 @@
 <!-- start custom footer snippets -->
-
+<!-- Default Statcounter code for Blog
+https://zhictory.github.io -->
+<script type="text/javascript">
+  var sc_project = 11777736;
+  var sc_invisible = 1;
+  var sc_security = "cada5eb1";
+</script>
+<script
+  type="text/javascript"
+  src="https://www.statcounter.com/counter/counter.js"
+  async
+></script>
+<noscript
+  ><div class="statcounter">
+    <a title="Web Analytics" href="https://statcounter.com/" target="_blank"
+      ><img
+        class="statcounter"
+        src="https://c.statcounter.com/11777736/0/cada5eb1/1/"
+        alt="Web Analytics"
+    /></a></div
+></noscript>
+<!-- End of Statcounter Code -->
 <!-- end custom footer snippets -->
